kubernetes/overlays/eks-hml-01/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apoia
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: pdpj-apoia
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.order: '10'
  labels:
    app: pdpj-apoia
    part-of: pdpj-apoia
spec:
  tls:
  - hosts:
    - apoia.stg.pdpj.jus.br
  rules:
  - host: apoia.stg.pdpj.jus.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apoia
            port:
              name: http
